
types_test = executable('types', 'types_test.cpp', dependencies: test_deps)
test('types', types_test)

#memory_test = executable('memory', 'memory.cpp', dependencies: test_deps)
#test('memory', memory_test)

#any_test = executable('any', 'any_test.cpp', dependencies: test_deps)
#test('any', any_test)

